--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "nodejs ./bin/www"
+    "start": "./node_modules/.bin/coffee ./bin/www.coffee"
   },
   "dependencies": {
     "express": "~4.0.0",
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "jade": "~1.3.0",
+    "coffee-script": "*"
   }
 }
