--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-    "coffee-script": "*"
+    "coffee-script": "*",
+    "fuzzy.io": "0.2.x",
+    "lodash": "3.6.x"
   }
 }
