--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jade": "~1.3.0",
     "coffee-script": "*",
     "fuzzy.io": "0.2.x",
-    "lodash": "3.6.x"
+    "lodash": "3.6.x",
+    "csv": "0.4.x",
+    "split": "0.3.x"
   }
 }
