--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fuzzy.io": "0.2.x",
     "lodash": "3.6.x",
     "csv": "0.4.x",
-    "split": "0.3.x"
+    "split": "0.3.x",
+    "async": "*"
   }
 }
